# gRPC_talk

./: README.md  client.py  interface.proto  server.py
rust_server/: Cargo.toml  build.rs
rust_server/src/: server.rs
